# FinancialForecastingInPython

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
config/: .env.example
data/: README.md  ford_balance_sheet.csv  netflix_forecast.csv  tesla_income_statement.csv
lessons/01-income-statements/: 01-introduction-to-financial-statements.ipynb  02-calculating-sales-and-cost-of-goods-sold-cogs.ipynb  03-working-with-raw-forecasts-datasets.ipynb
lessons/01-income-statements/docs/: 01 - Introduction to Financial Statements.md  02-Calculating sales and Cost of Goods Sold(COGS).md  03-Working with raw forecasts datasets.md
lessons/02-balance-sheet-and-forecast-ratios/: 01-introduction-to-balance-sheets.ipynb  02-balance-sheet-efficiency-ratios-part-1.ipynb  03-balance-sheet-efficiency-ratios-part-2.ipynb
lessons/02-balance-sheet-and-forecast-ratios/docs/: 01 - Introduction to Balance Sheets.md  02 - Balance Sheet Efficiency Ratios - Part 1.md  03 - Balance Sheet Efficiency Ratios - Part 2.md
lessons/03-formatting-raw-data-managing-dates-and-financial-periods/: 01-financial-periods-and-how-to-work-with-them.ipynb  02-the-datetime-library.ipynb  03-tips-and-tricks-when-working-with-datasets.ipynb
lessons/03-formatting-raw-data-managing-dates-and-financial-periods/docs/: 01 - Financial periods and how to work with them.md  02 - The datetime library.md  (+1 more)
lessons/04-assumptions-seasonality-and-variance/: 01-financial-assumptions.ipynb  02-variance.ipynb  03-seasonality.ipynb  03-variance.ipynb
scripts/: generate_lessons.py
src/ffp/: __init__.py
(+2 files in other folders)
